PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.running-a-python-script-using-pyzo-from-the-editor.txt
<div class="post-text" itemprop="text">
<p>This is my first time to use python. I am using IDE Pyzo and trying to run the following script.</p>
<pre><code>import matplotlib.pyplot as plt 
from numpy.random import normal,rand
x = normal(size=200)
plt.hist(x, bins=30)
plt.show()
</code></pre>
<p>When I run it line by line from the shell it is working. But when I try to run it from the editor "Run the file as script" it gives the following error:</p>
<pre><code>&gt;&gt;&gt; %cd "c:\program files (x86)\pyzo"
  File "&lt;console&gt;", line 1
    %cd "c:\program files (x86)\pyzo"
    ^
SyntaxError: invalid syntax

&gt;&gt;&gt; %run -i "C:\Program Files (x86)\pyzo\Test.py"
  File "&lt;console&gt;", line 1
    %run -i "C:\Program Files (x86)\pyzo\Test.py"
    ^
SyntaxError: invalid syntax
</code></pre>
<p>Any idea how to run the script without error?</p>
</div>
<div class="post-text" itemprop="text">
<p>Try specifying the two imports on different lines</p>
<pre><code>import matplotlib.pyplot as plt 
from numpy.random import normal,rand
</code></pre>
</div>
<span class="comment-copy">Put from numpy.random import .... in a new line, not after plt</span>
<span class="comment-copy">I did this but still got the same error: &gt;&gt;&gt; %cd "c:\program files (x86)\pyzo"   File "&lt;console&gt;", line 1     %cd "c:\program files (x86)\pyzo"     ^ SyntaxError: invalid syntax  &gt;&gt;&gt; %run -i "C:\Program Files (x86)\pyzo\Test.py"   File "&lt;console&gt;", line 1     %run -i "C:\Program Files (x86)\pyzo\Test.py"     ^ SyntaxError: invalid syntax  &gt;&gt;&gt;</span>
